# Marx

./: Cargo.toml  README.md  install.sh  pfetch.spm
src/: args.rs  aur.rs  main.rs  our.rs  utils.rs
