[package]
name = "Marx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
reqwest = "0.11"
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
clap = {version = "3.2.16", features = ["derive"]}
colored = "2.0.0"
